# oxc-transform-jsx-dom-expressions

./: Cargo.toml  DEVELOPMENT_ROADMAP.md  IMPLEMENTATION_STATUS.md  PHASE2_STATUS.md  PROJECT_STATUS.md  README.md  TEST_VERIFICATION.md  test_ast_builder.rs  test_attributes.jsx  test_codegen.rs  test_dynamic.jsx  test_phase1.jsx  test_simple.jsx  test_text_interpolation.jsx
benches/: transform_bench.rs
bot_instructions/: BOT_COMMANDS_REFERENCE.md  BOT_INDEX.md  BOT_WORKFLOW_GUIDE.md  CLINE_INSTRUCTIONS.md  IMPLEMENTATION_BOT_INSTRUCTIONS.md  README.md  SUMMARY_BOT_INSTRUCTIONS.md
src/: lib.rs  main.rs  test_ast_api.rs
src/transformer/: components.rs  events.rs  jsx.rs  jsx_new.rs  jsx_old.rs  mod.rs  mod_new.rs  mod_old.rs  optimization.rs
src/utils/: ast_utils.rs  ast_utils_new.rs  mod.rs  template.rs  template_new.rs
tests/: comprehensive_fixture_tests.rs  fixture_comparison_test.rs  integration_tests.rs
tests/__dom_fixtures__/textInterpolation/: code.js
tests/__dom_wrapperless_fixtures__/components/: code.js
tests/__dynamic_fixtures__/fragments/: code.js
tests/__dynamic_fixtures__/simpleElements/: code.js
tests/__dynamic_fixtures__/textInterpolation/: code.js
tests/__ssr_fixtures__/customElements/: code.js
tests/__ssr_hydratable_fixtures__/components/: code.js
tests/__universal_fixtures__/components/: code.js
tests/fixtures/: dynamic_content.expected.js  dynamic_content.jsx  show_component.expected.js  show_component.jsx  simple_element.expected.js  simple_element.jsx
