[package]
name = "oxc-transform-jsx-dom-expressions"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust-based dom-expressions JSX transformer using OXC"
license = "MIT"
repository = "https://github.com/your-username/oxc-transform-jsx-dom-expressions"
keywords = ["dom-expressions", "jsx", "transform", "oxc", "rust"]
categories = ["development-tools", "web-programming", "compilers"]

[dependencies]
oxc_allocator = "0.72.3"
oxc_ast = "0.72.3"
oxc_codegen = "0.72.3"
oxc_parser = "0.72.3"
oxc_semantic = "0.72.3"
oxc_span = "0.72.3"
oxc_syntax = "0.72.3"
oxc_transformer = "0.72.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports"] }
insta = "1.43.1"

[[bench]]
name = "transform_bench"
harness = false
